--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
-    "babel-eslint": "file:../../../.nvm/versions/node/v18.5.0/lib/node_modules/babel-eslint",
-    "eslint": "file:../../../.nvm/versions/node/v18.5.0/lib/node_modules/eslint",
-    "eslint-config-airbnb-base": "file:../../../.nvm/versions/node/v18.5.0/lib/node_modules/eslint-config-airbnb-base",
-    "eslint-plugin-import": "file:../../../.nvm/versions/node/v18.5.0/lib/node_modules/eslint-plugin-import",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
     "hint": "^2.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
